// =====================================================================
//  ENTREPOT MPD - Spotify Million Playlist Dataset
//  A coller tel quel dans https://dbdiagram.io
//  Modele en etoile PostgreSQL 16 - 66 346 428 lignes de faits
// =====================================================================

Project mpd {
  database_type: 'PostgreSQL'
  Note: '''
  Entrepot construit a partir de 31,2 Go de JSON (1 000 slices du MPD).

  Volumetrie : 1 000 000 playlists / 66 346 428 lignes-pistes /
               2 262 292 pistes / 734 684 albums / 295 860 artistes.
  Encombrement : 8,1 Go (modele) + 4,9 Go (staging transitoire).

  Grain du fait : une ligne = une piste a une position donnee d une playlist.
  Table de faits SANS mesure (factless fact table) : le fait mesure est
  l appartenance elle-meme.
  '''
}

// =====================================================================
//  DIMENSIONS
// =====================================================================

Table dim_artist {
  artist_sk         integer     [pk, note: 'Cle de substitution dense, attribuee par row_number() sur artist_id trie']
  artist_id         varchar(22) [not null, unique, note: 'Identifiant Spotify base62, sans le prefixe spotify:artist: . Verifie 22 caracteres sur 100% des lignes']
  artist_name       text        [not null, note: 'Max 326 caracteres. Un artist_id porte TOUJOURS le meme nom : 0 divergence sur 66 M lignes']
  artist_name_norm  text        [note: 'GENERATED STORED = lower(unaccent(btrim(nom))). Indexe en GIN trigramme + btree']

  indexes {
    artist_id [unique]
    artist_name_norm [name: 'ix_artist_norm']
    artist_name_norm [name: 'ix_artist_trgm', note: 'GIN trigramme (pg_trgm) - recherche par sous-chaine']
  }

  Note: '''
  295 860 lignes - 66 Mo.

  PIEGE : 5 991 noms sont des HOMONYMES. Six artistes distincts se nomment
  "Drake". Toujours agreger sur artist_sk / artist_id, JAMAIS sur le nom.

  PIEGE : un artiste se nomme litteralement antislash-N, ce qui interdit
  toute sentinelle textuelle au chargement.
  '''
}

Table dim_album {
  album_sk         integer     [pk]
  album_id         varchar(22) [not null, unique, note: 'base62, sans le prefixe spotify:album:']
  album_name       text        [not null, note: 'Max 286 caracteres']
  album_name_norm  text        [note: 'GENERATED STORED, indexe en GIN trigramme']

  indexes {
    album_id [unique]
    album_name_norm [name: 'ix_album_trgm', note: 'GIN trigramme (pg_trgm) - recherche par sous-chaine']
  }

  Note: '''
  734 684 lignes - 156 Mo.

  VOLONTAIREMENT SANS CLE ARTISTE : 38 235 albums (5,2 %) portent des pistes
  de PLUSIEURS artistes - compilations, bandes originales, "Various Artists".
  Une FK artiste ici fausserait tous ces albums.
  '''
}

Table dim_track {
  track_sk         integer     [pk]
  track_id         varchar(22) [not null, unique, note: 'base62, sans le prefixe spotify:track:']
  track_name       text        [not null, note: 'Max 332 caracteres']
  artist_sk        integer     [not null, ref: > dim_artist.artist_sk]
  album_sk         integer     [not null, ref: > dim_album.album_sk]
  duration_ms      integer     [not null, note: 'CHECK >= -1 et non >= 0 : une piste vaut -1 a la source']
  track_name_norm  text        [note: 'GENERATED STORED, indexe en GIN trigramme + btree']

  indexes {
    track_id [unique]
    artist_sk [name: 'ix_track_artist']
    album_sk  [name: 'ix_track_album']
    track_name_norm [name: 'ix_track_norm']
    track_name_norm [name: 'ix_track_trgm', note: 'GIN trigramme (pg_trgm) - recherche par sous-chaine']
  }

  Note: '''
  2 262 292 lignes - 606 Mo.

  track_id determine STRICTEMENT (nom, artiste, album, duree) : 0 divergence
  constatee sur les 66 M lignes sources. La dimension est donc sure.

  ANOMALIE conservee par fidelite a la source :
    - 1 piste a duration_ms = -1 (Smash 3 - Scary Halloween Sound Effects)
    - 1 086 lignes-pistes a 0 ms
  Filtrer duration_ms > 0 pour tout calcul de duree.
  '''
}

Table dim_playlist {
  playlist_id    integer   [pk, note: 'pid natif du MPD, deja dense 0..999999 : aucune cle de substitution necessaire']
  name           text      [not null, note: '70 011 noms ont des espaces de bord, 28 222 contiennent des emoji hors BMP']
  description    text      [null, note: 'NULL = champ ABSENT du JSON (981 240 playlists). 18 760 en ont une ; 2 sont blanches, 2 contiennent un saut de ligne']
  collaborative  boolean   [not null, note: 'Source typee en CHAINE "true"/"false". 22 569 a true']
  modified_at    date      [not null, note: 'Source = epoch Unix, 100% multiples de 86400 -> aucune heure, donc DATE. Etendue 2010-04-16 a 2017-11-01']
  num_tracks     smallint  [not null, note: 'Max 376 - au-dela de la limite de 250 annoncee par la doc du MPD']
  num_albums     smallint  [not null, note: 'Max 244']
  num_artists    smallint  [not null, note: 'Max 238']
  num_edits      smallint  [not null, note: 'Max 201']
  num_followers  integer   [not null, note: 'PIEGE : max 71 643, un smallint (32 767) deborderait']
  duration_ms    bigint    [not null, note: 'Max 635 073 792. Egal a la somme des pistes : coherent sur 100% des playlists']
  name_norm      text      [note: 'GENERATED STORED, indexe en GIN trigramme + btree']

  indexes {
    modified_at   [name: 'ix_pl_modified']
    num_followers [name: 'ix_pl_followers']
    name_norm     [name: 'ix_pl_norm']
    name_norm     [name: 'ix_pl_trgm', note: 'GIN trigramme (pg_trgm) - recherche par sous-chaine']
    playlist_id   [name: 'ix_pl_collab (partiel WHERE collaborative)']
  }

  Note: '''
  1 000 000 lignes - 168 Mo.
  Les agregats num_* sont tous verifies coherents avec le contenu reel.
  '''
}

// =====================================================================
//  FAIT
// =====================================================================

Table fact_playlist_track {
  playlist_id  integer   [not null, ref: > dim_playlist.playlist_id]
  track_sk     integer   [not null, ref: > dim_track.track_sk]
  artist_sk    integer   [not null, ref: > dim_artist.artist_sk, note: 'DENORMALISE depuis dim_track : +300 Mo, mais supprime une jointure sur 66 M lignes']
  pos          smallint  [not null, note: 'Position dans la playlist, contigue 0..n-1. Max 375. Place en dernier : 3 int4 puis 1 int2 = 14 octets, cale sur 16 sans gaspillage']

  indexes {
    (playlist_id, pos)       [pk]
    (artist_sk, playlist_id) [name: 'ix_fact_artist (parcours index-only)']
    (track_sk, playlist_id)  [name: 'ix_fact_track (parcours index-only)']
  }

  Note: '''
  66 346 428 lignes - 6,7 Go (2,8 Go de donnees + 3,9 Go d index).
  fillfactor = 100 : table en lecture seule.

  PIEGE : la cle primaire est (playlist_id, pos) et SURTOUT PAS
  (playlist_id, track_sk) - 881 652 pistes apparaissent PLUSIEURS FOIS
  dans une meme playlist.

  Ecrite physiquement triee par playlist_id (ORDER BY au chargement) :
  localite maximale pour les requetes centrees playlist.
  '''
}

// =====================================================================
//  AGREGATS MATERIALISES  (rafraichir apres tout rechargement)
// =====================================================================

Table mv_artist_stats {
  artist_sk      integer [pk, ref: - dim_artist.artist_sk]
  artist_id      varchar(22)
  artist_name    text
  n_occurrences  bigint  [note: 'Lignes-pistes de cet artiste']
  n_playlists    bigint  [note: 'Playlists distinctes ou il apparait']
  n_tracks       bigint  [note: 'Pistes a son catalogue']

  indexes {
    n_occurrences [name: 'ix_mvartist_occ']
    n_playlists   [name: 'ix_mvartist_pl']
  }

  Note: '295 860 lignes - 39 Mo. Rend instantane le "top artistes" (1,5 ms au lieu de balayer 66 M lignes).'
}

Table mv_track_stats {
  track_sk       integer [pk, ref: - dim_track.track_sk]
  track_id       varchar(22)
  track_name     text
  artist_sk      integer
  n_occurrences  bigint
  n_playlists    bigint

  indexes {
    n_occurrences [name: 'ix_mvtrack_occ']
  }

  Note: '2 262 292 lignes - 281 Mo. Popularite par piste.'
}

// =====================================================================
//  STAGING  (UNLOGGED, transitoire - DROP SCHEMA staging CASCADE)
// =====================================================================

Table stg_item {
  playlist_id  integer     [not null]
  pos          smallint    [not null]
  track_id     varchar(22) [not null]
  Note: '66 346 428 lignes. Alimente la table de faits par jointure sur dim_track.'
}

Table stg_track {
  track_id     varchar(22) [not null]
  track_name   text        [not null]
  artist_id    varchar(22) [not null]
  artist_name  text        [not null]
  album_id     varchar(22) [not null]
  album_name   text        [not null]
  duration_ms  integer     [not null]
  Note: '6 213 981 lignes (dedoublonnees par worker, le global se fait en SQL). Alimente dim_track, dim_artist et dim_album.'
}

Table stg_playlist {
  playlist_id      integer  [not null]
  name             text     [not null]
  description      text     [not null, note: 'Toujours renseignee - l absence est portee par has_description']
  has_description  boolean  [not null, note: 'PARADE au piege de la sentinelle : un artiste se nomme litteralement antislash-N, donc l absence ne peut PAS etre codee dans la valeur']
  collaborative    text     [not null, note: 'Recu brut "true"/"false", caste en boolean par 03_transform']
  modified_at      bigint   [not null, note: 'Recu brut en epoch, caste en date par 03_transform']
  num_tracks       integer  [not null]
  num_albums       integer  [not null]
  num_artists      integer  [not null]
  num_edits        integer  [not null]
  num_followers    integer  [not null]
  duration_ms      bigint   [not null]
  Note: '1 000 000 lignes. Types laches a dessein : le casting est fait a la transformation, pas au chargement.'
}

TableGroup "Modele en etoile" {
  dim_artist
  dim_album
  dim_track
  dim_playlist
  fact_playlist_track
}

TableGroup "Agregats materialises" {
  mv_artist_stats
  mv_track_stats
}

TableGroup "Staging (transitoire)" {
  stg_item
  stg_track
  stg_playlist
}
